--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "explore_attacks"}]
 [tool.poetry.dependencies]
 python = ">=3.9,<3.11"
 tapas = {git = "git@github.com:alan-turing-institute/privacy-sdg-toolbox.git"}
+scikit-learn = "^1.2.2"
 
 [build-system]
 requires = ["poetry-core"]
